--- a/static/style.css
+++ b/static/style.css
@@ -55,6 +55,8 @@ padding: 12px 20px;
 margin: 8px 10px;
 display: list-item;
 border-radius: 8px;
+font-family: 'Urbanist', sans-serif;
+font-weight: 600;
 
 }
 
