Started Show comments

--- a/templates/add-show-review.html
+++ b/templates/add-show-review.html
@@ -16,6 +16,12 @@
 
             {% endfor %}
         </select>
+        <label>Review Title</label>
+        <input type="text" placeholder="a breif title" name="title">
+        <label>Artist Names</label>
+        <input type="text" placeholder="artist names" name="artists">
+        <label>Genre</label>
+        <input type="text" placeholder="genre" name="genre">
         <label>Show Date</label>
         <input type="text" placeholder="approximate date" name="date">
         <label>Price (Best guess)</label>
