--- a/static/style.css
+++ b/static/style.css
@@ -86,4 +86,46 @@ button:hover {
   opacity: 0.9;
 }
 
+.container {
+    background-color: #ffffff;
+    padding: 25px;
+    text-align: center;
+    margin-left: 35%;
+    margin-bottom: 150px;
+    width: 15%;
+    border-radius: 2%;
+}
 
+.comment-section {
+    padding-top: 20px;
+    border-radius: 1%;
+
+}
+
+.avatar-image {
+    max-width:20%;
+    font-weight: 600;
+    padding-bottom: 25px;
+    height:auto;
+
+}
+img {
+    max-width:20%;
+    height:auto;
+    padding-top: 10px;
+
+}
+
+.meta {
+    margin: 50px;
+}
+
+.comment-section {
+    margin-top: 50px;
+    background-color: #ffffff;
+
+}
+
+.comment-title {
+    text-align: center;
+}
