--- a/templates/show-comment-from.html
+++ b/templates/show-comment-from.html
@@ -2,7 +2,7 @@
 
 <div class="title">
     <form action="{{ url_for('show_comment') }}" method="post">
-        <label></label>
+        <label>Venue</label>
         <input type="text" placeholder="venue-name" name="venue-name">
         <label>City</label>
         <input type="text" placeholder="city" name="city">
