--- a/templates/add-show-review.html
+++ b/templates/add-show-review.html
@@ -1,4 +1,5 @@
 {% include "site.html" %}
+{% include "navbar.html" %}
 
 <div class="title">
     <form action="{{ url_for('show_review') }}" method="post">
