--- a/templates/all-show-reviews.html
+++ b/templates/all-show-reviews.html
@@ -1,6 +1,6 @@
 {% include "site.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
+{% include "navbar.html" %}
 
 <div class="title">
 {% for post in reviews: %}
