--- a/templates/venue-review.html
+++ b/templates/venue-review.html
@@ -1,4 +1,6 @@
 {% include "site.html" %}
+{% include "navbar.html" %}
+
 <div class="title">
     {% if message == True %}
         <p>sorry! that venue has not been added! Please try another</p>
