--- a/templates/view-venue-review.html
+++ b/templates/view-venue-review.html
@@ -1,5 +1,7 @@
 {% include "site.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% include "navbar.html" %}
+
 <div class="title">
 <div class="container">
 
@@ -36,9 +38,11 @@
         </li>
         {% endfor %}
     </ul>
+    {% if current_user.is_authenticated %}
     {{ ckeditor.load(pkg_type="basic") }}
     {{ ckeditor.load() }}
     {{ ckeditor.config(name='body') }}
     {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+    {% endif %}
 </div>
 </div>
