--- a/templates/add-venue.html
+++ b/templates/add-venue.html
@@ -1,11 +1,17 @@
 {% include "site.html" %}
-
-<div class="title">
-    <form action="{{ url_for('add_venue') }}" method="post">
-        <label>Venue Name</label>
-        <input type="text" placeholder="venue-name" name="venue-name">
-        <label>City</label>
-        <input type="text" placeholder="city" name="city">
-        <button type="submit">🦄</button>
-    </form>
-</div>
+{% include "navbar.html" %}
+{% if current_user.is_authenticated: %}
+    <div class="title">
+        <form action="{{ url_for('add_venue') }}" method="post">
+            <label>Venue Name</label>
+            <input type="text" placeholder="venue-name" name="venue-name">
+            <label>City</label>
+            <input type="text" placeholder="city" name="city">
+            <button type="submit">🦄</button>
+        </form>
+    </div>
+{% else: %}
+    <div class="title">
+        <h1>you cant add a Venue without an account you silly, silly virgin</h1>
+    </div>
+{% endif %}
