--- a/templates/create_user_form.html
+++ b/templates/create_user_form.html
@@ -1,4 +1,5 @@
 {% include "site.html" %}
+{% include "navbar.html" %}
 <div class="title">
 <form action="{{ url_for('create_account_html') }}" method="post">
     <label>Username</label>
@@ -7,7 +8,7 @@
     <input type="text" placeholder="password" name="password">
     <label>Email</label>
     <input type="text" placeholder="email" name="email">
-    <button>Ok</button>
+    <button>ok....</button>
 </form>
 
 </div>
