--- a/templates/show-comment-from.html
+++ b/templates/show-comment-from.html
@@ -1,5 +1,5 @@
 {% include "site.html" %}
-
+{% include "navbar.html" %}
 <div class="title">
     <form action="{{ url_for('show_comment') }}" method="post">
         <label>Venue</label>
