--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
         <h2>this is an api that is useful if you are in Kansas City and you love dad rock, hardcore, or indie music and you want to find cool local shows all in one place</h2>
     </div>
 
-    <img class="gnomes" src="{{ url_for('static', filename='img/gnomes.JPG')}}"/>
+    <a href="https://www.youtube.com/channel/UCihF4V5Y1pZUuKQha4vtsIA/videos"><img class="gnomes"  src="{{ url_for('static', filename='img/gnomes.JPG')}}"/></a>
 
 {% endblock %}
