--- a/templates/create_user_form.html
+++ b/templates/create_user_form.html
@@ -8,6 +8,8 @@
     <input type="text" placeholder="password" name="password">
     <label>Email</label>
     <input type="text" placeholder="email" name="email">
+    <label>Profile Pic URL (optional)</label>
+    <input type="text" placeholder="url for your profile pic" name="img_url">
     <button>ok....</button>
 </form>
 
