--- a/templates/view-venue-review.html
+++ b/templates/view-venue-review.html
@@ -3,9 +3,9 @@
 {% include "navbar.html" %}
 
 <div class="title">
-<div class="container">
+<div class="review-layout">
 
-    <div class="post-heading">
+    <div class="card2">
             <h1>"{{post.review_title}}"</h1>
             {% if review_author != None: %}
             <p>-{{ review_author.username }}</p>
