--- a/templates/add-venue.html
+++ b/templates/add-venue.html
@@ -2,13 +2,15 @@
 {% include "navbar.html" %}
 {% if current_user.is_authenticated: %}
     <div class="title">
-        <form action="{{ url_for('add_venue') }}" method="post">
-            <label>Venue Name</label>
-            <input type="text" placeholder="venue-name" name="venue-name">
-            <label>City</label>
-            <input type="text" placeholder="city" name="city">
-            <button type="submit">🦄</button>
-        </form>
+        <div class="form">
+            <form action="{{ url_for('add_venue') }}" method="post">
+                <label>Venue Name</label>
+                <input type="text" placeholder="venue-name" name="venue-name">
+                <label>City</label>
+                <input type="text" placeholder="city" name="city">
+                <button type="submit">🦄</button>
+            </form>
+        </div>
     </div>
 {% else: %}
     <div class="title">
