--- a/static/pfstyles.css
+++ b/static/pfstyles.css
@@ -20,11 +20,18 @@ img {
     display: block;
 }
 
+a {
+    color: black;
+    padding-left: 10px;
+    text-decoration: none;
+}
+
 .container {
     max-width: 93.5rem;
     margin: 0 auto;
     padding: 0 2rem;
 }
+
 
 .btn {
     display: inline-block;
@@ -70,7 +77,7 @@ img {
 }
 
 .profile-image img {
-    border-radius: 50%;
+    border-radius: 2%;
 }
 
 .profile-user-settings,
@@ -90,13 +97,16 @@ img {
     font-size: 4.2rem;
     font-weight: 300;
 }
-
+.profile-real-name {
+    color: black;
+}
 .profile-edit-btn {
     font-size: 2.4rem;
     line-height: 1.8;
     border: 0.1rem solid #dbdbdb;
     border-radius: 0.3rem;
     padding: 0 2.4rem;
+    color: white;
     margin-left: 2rem;
 }
 
@@ -126,6 +136,7 @@ img {
     font-weight: 400;
     line-height: 1.5;
     margin-top: 2.3rem;
+    color: black;
 }
 
 .profile-real-name,
@@ -258,6 +269,7 @@ img {
     .profile-bio {
         font-size: 1.4rem;
         margin-top: 1.5rem;
+        color: black;
     }
 
     .profile-edit-btn,
