--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="profile-user-settings">
 				<h1 class="profile-user-name">{{ current_user.username }} </h1>
-				<button class="btn profile-edit-btn">Edit Profile</button>
+				<a href="{{url_for('edit_profile') }}"><button class="btn profile-edit-btn">Edit Profile</button></a>
 				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
 			</div>
 			<div class="profile-stats">
@@ -29,7 +29,7 @@
 				</ul>
 			</div>
 			<div class="profile-bio">
-				<p><span class="profile-real-name">About</span> Write a discription</p>
+				<p><span class="profile-real-name">About</span><a href="{{url_for('edit_description')}}">{{ current_user.description }}</a></p>
 			</div>
 		</div>
 		<!-- End of profile section -->
