Fixed some stuff like edit delete buttons

--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,7 @@ html, body {
 
 body {
    background: #0F5D66;
+   margin: 0px;
 }
 
 #title {
@@ -53,6 +54,7 @@ body {
      -webkit-border-radius: 10px;
      border-radius: 10px;
 }
+
 #shape:before {
   content: "";
   position: absolute;
@@ -79,7 +81,7 @@ body {
 }
 
 form {
-   margin-left: 35%;
+   margin-left: 33.333%;
 }
 
 .form {
@@ -167,6 +169,11 @@ label {
     background-image: url('img/uninicornII.jpeg');
 
 }
+
+label {
+    color: #FCFF91;
+}
+
 .commentList {
     padding:0;
     list-style:none;
@@ -193,47 +200,8 @@ label {
 .commentText p {
     margin:0;
 }
-/*
-.star-five {
-  margin: 50px 0;
-  position: relative;
-  display: block;
-  color: red;
-  width: 0px;
-  height: 0px;
-  border-right: 100px solid transparent;
-  border-bottom: 70px solid red;
-  border-left: 100px solid transparent;
-  transform: rotate(35deg);
-}
-.star-five:before {
-  border-bottom: 80px solid red;
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: -45px;
-  left: -65px;
-  display: block;
-  content: '';
-  transform: rotate(-35deg);
-}
-.star-five:after {
-  position: absolute;
-  display: block;
-  color: red;
-  top: 3px;
-  left: -105px;
-  width: 0px;
-  height: 0px;
-  border-right: 100px solid transparent;
-  border-bottom: 70px solid red;
-  border-left: 100px solid transparent;
-  transform: rotate(-70deg);
-  content: '';
-}
-*/
+
+
 .left-table {
     position: absolute;
     margin-bottom: 250px;
@@ -241,24 +209,24 @@ label {
 }
 
 input[type=text], textarea {
-width: 25%;
-padding: 12px 20px;
-margin: 8px 10px;
-display: list-item;
-border-radius: 8px;
-font-family: 'Urbanist', sans-serif;
-font-weight: 600;
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 10px;
+    display: list-item;
+    border-radius: 8px;
+    font-family: 'Urbanist', sans-serif;
+    font-weight: 600;
 
 }
 
 button {
-  background-color: #04AA6D;
+  background-color: #0F5D66;
   font-size: 25px;
   color: white;
   padding: 14px 20px;
   margin-top: 20px;
-  border: 2px solid;
-  border-radius: 2%;
+  border: 5px solid #8FD1A2;
+  border-radius: 5px;
   cursor: pointer;
   width: 15%;
 }
@@ -270,15 +238,42 @@ button::hover {
     color: white;
 }
 .btn-primary {
-  background-color: #04AA6D;
+  background-color: #0F5D66;
   font-size: 25px;
   color: white;
+  border-radius: 5px;
   padding: 14px 20px;
   margin-top: 20px;
   margin-left: 10px;
-  border: none;
+  border: 5px solid #8FD1A2;
   cursor: pointer;
   width: 15%;
+
+}
+
+.btn {
+  background-color: #0F5D66;
+  font-size: 25px;
+  color: white;
+  padding: 14px 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-left: 10px;
+  border: 5px solid #8FD1A2;
+  cursor: pointer;
+  width: 15%;
+}
+
+#hamburger {
+    background-color: transparent;
+    color: #8FD1A2;
+    border: 0px;
+    display: none;
+    cursor: pointer;
+}
+
+#hamburger::hover {
+    background-color: #a2d173;
 }
 
 .gnomes {
@@ -305,7 +300,7 @@ button:hover {
 btn:hover {
   opacity: 0.9;
 }
-.container {
+/* .container {
     background-color: #ffffff;
     padding: 25px;
     text-align: center;
@@ -313,6 +308,20 @@ btn:hover {
     margin-bottom: 150px;
     width: 15%;
     border-radius: 2%;
+} */
+
+
+
+.card {
+	 color: inherit;
+	 cursor: pointer;
+	 width: calc(33% - 3rem);
+	 min-width: calc(33% - 3rem);
+	 height: 400px;
+	 min-height: 400px;
+	 perspective: 1000px;
+	 margin: 1rem auto;
+	 position: relative;
 }
 
 
@@ -391,3 +400,79 @@ li a:hover {
     font-size: 25px;
     margin: 10vh;
 }
+
+
+@media screen and (max-width: 767px) {
+    .navlist {
+        display: none;
+        flex-direction: column;
+    }
+    .navlist.show {
+        display: flex;
+        padding-left: 0px;
+
+    }
+    #hamburger {
+        display: block;
+        margin-bottom: 25px;
+        maring-left: 0px;
+        width: 25%;
+    }
+
+    #title {
+        text-align: center;
+
+    }
+
+    #top-shelf {
+        text-align: center;
+    }
+
+    input[type=text], textarea {
+        width: 100%;
+        padding: 10px 10px;
+        margin-right: 33%;
+        display: list-item;
+        border-radius: 8px;
+        font-family: 'Urbanist', sans-serif;
+        font-weight: 600;
+
+    }
+
+    form {
+        width: 100%;
+        margin-left: 0%;
+        padding: 35px;
+    }
+
+    .form-control {
+        width: 100%;
+
+    }
+
+    button {
+        width: 100%;
+
+
+    }
+
+    .btn {
+        width: 100%;
+
+    }
+
+    .btn-primary {
+        width: 100%;
+    }
+
+    #submit {
+        width: 100%;
+    }
+
+    h2 {
+        display: flex;
+        padding: 10px;
+    }
+}
+
+
