--- a/templates/add-venue.html
+++ b/templates/add-venue.html
@@ -17,3 +17,4 @@
         <h1>you cant add a Venue without an account you silly, silly virgin</h1>
     </div>
 {% endif %}
+{% include "footer.html" %}
