--- a/templates/bots.html
+++ b/templates/bots.html
@@ -10,3 +10,4 @@
         <button><a href="{{ url_for('riotroom_data') }}">Riot Room Bot</a></button>
     </div>
 </div>
+{% include "footer.html" %}
