--- a/templates/edit-description.html
+++ b/templates/edit-description.html
@@ -4,3 +4,4 @@
 <div class="title">
     {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 </div>
+{% include "footer.html" %}
