--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -9,3 +9,4 @@
     <h2>do not edit fields you dont wish to change... </h2>
     {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 </div>
+{% include "footer.html" %}
