--- a/templates/index.html
+++ b/templates/index.html
@@ -10,3 +10,4 @@
     <a href="https://www.youtube.com/channel/UCihF4V5Y1pZUuKQha4vtsIA/videos"><img class="gnomes"  src="{{ url_for('static', filename='img/gnomes.JPG')}}"/></a>
 
 {% endblock %}
+{% include "footer.html" %}
