--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% include "site.html" %}
+
+
 <ul class="navlist">
-
-
 
     {% if not current_user.is_authenticated: %}
     <li><a href="{{ url_for('create_account_html') }}">Create Account</a></li>
@@ -16,6 +16,10 @@
     {% endif %}
     <li><a href="{{ url_for('home') }} ">Home</a></li>
 </ul>
+<button class="habmurger" id="hamburger">
+        <i class="fas fa-bars"></i>
+</button>
+
 
 
 <!--{% include "site.html" %}-->
