--- a/templates/all-show-reviews.html
+++ b/templates/all-show-reviews.html
@@ -1,48 +1,71 @@
-{% include "site.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Local Shows API;</title>
+    <link href="{{ url_for('static', filename='review-styles.css')}}", rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,600;0,700;1,100;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+</head>
+<body>
 {% import "bootstrap/wtf.html" as wtf %}
 {% include "navbar.html" %}
 
-{% for post in reviews: %}
-<div class="review-layout">
+<!--<div class="comment-section">-->
+<!--    <h2 class="comment-title">Comments</h2>-->
+<!--    <ul class="commentList">-->
+<!--        {% for comment in comments: %}-->
+<!--        <li>-->
+<!--            <div class="commenterImage">-->
+<!--            </div>-->
+<!--            <div class="commentText">-->
+<!--                <p>{{ comment.text|safe }}</p>-->
+<!--            </div>-->
+<!--            <div class="avatar-image">-->
+<!--                <span>{{ comment.comment_author.username }}</span>-->
+<!--                <img src="{{ url_for('static', filename='img/scoob.jpeg')}}"/>-->
+<!--            </div>-->
+<!--        </li>-->
+<!--        {% endfor %}-->
+<!--    </ul>-->
+<!--</div>-->
 
-        <div class="show-review">
-                <img src="{{ post.user.profile_picture }}">
-                <h2>"{{post.title}}"</h2>
-                <p>Artist Names</p>
-                <p>{{ post.artist_names }}</p>
-                {% if post.user != None: %}
-                <p>-{{ post.user.username }}</p>
-                {% else: %}
-                <p>-Spongebob</p>
-                {% endif %}
-                <p>Venue </p>
-                <p>{{post.venue.venue_name}}</p>
-                <p>Date</p>
-                <p>{{ post.date }}</p>
-                <p>Price</p>
-                <p>{{ post.price }}</p>
-                <p>Rating</p>
-                <p>🦄🦄🦄🦄</p>
-                <p>Review</p>
-                <p>{{post.review}}</p>
+
+{% block content %}
+<div class="container">
+
+  <h1 class="show-review-header">Show Reviews</h1>
+  <h2 class="description">these are your experiences, your good times and bad times.</h2>
+  {% for review in reviews %}
+  <div class="card">
+    <div class="back">
+        <div>
+            <div class="title">"{{ review.title }}"</div>
+            <div class="review"><span class="venue-name">Date: </span>{{review.date}}</div>
+            <div class="rating">
+            <label><span class="venue-name">Rating: </span>{{ review.rating }}</label>
+                <i></i>
+            </div>
+
+            <p class="review"><span class="venue-name">Venue: </span>{{ review.venue.venue_name }}</p>
+            <p class="overview">{{ review.review }}</p>
+            {% if review.user_id == current_user.id: %}
+            <a href="{{ url_for('edit_show_review', id=review.id) }}" class="button edit-btn">Edit</a>
+            <a href="{{ url_for('delete_show_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
+            {% endif %}
+
         </div>
-</div>
-<div class="comment-section">
-    <h2 class="comment-title">Comments</h2>
-    <ul class="commentList">
-        {% for comment in comments: %}
-        <li>
-            <div class="commenterImage">
-            </div>
-            <div class="commentText">
-                <p>{{ comment.text|safe }}</p>
-            </div>
-            <div class="avatar-image">
-                <span>{{ comment.comment_author.username }}</span>
-                <img src="{{ url_for('static', filename='img/scoob.jpeg')}}"/>
-            </div>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+    </div>
+  </div>
 {% endfor %}
+</div>
+
+{% endblock %}
+<button class="add-review-button"><a href="{{ url_for('show_review') }}">
+    Add Review</a>
+</button>
+
+{% include "footer.html" %}
