--- a/templates/all-venue-reviews.html
+++ b/templates/all-venue-reviews.html
@@ -1,46 +1,63 @@
-{% include "site.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Local Shows API;</title>
+    <link href="{{ url_for('static', filename='review-styles.css')}}", rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,600;0,700;1,100;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+</head>
+<body>
 {% import "bootstrap/wtf.html" as wtf %}
 {% include "navbar.html" %}
 
-<div class="title">
-{% for post in reviews: %}
-    <div class="container">
+<!--<div class="comment-section">-->
+<!--    <h2 class="comment-title">Comments</h2>-->
+<!--    <ul class="commentList">-->
+<!--        {% for comment in comments: %}-->
+<!--        <li>-->
+<!--            <div class="commenterImage">-->
+<!--            </div>-->
+<!--            <div class="commentText">-->
+<!--                <p>{{ comment.text|safe }}</p>-->
+<!--            </div>-->
+<!--            <div class="avatar-image">-->
+<!--                <span>{{ comment.comment_author.username }}</span>-->
+<!--                <img src="{{ url_for('static', filename='img/scoob.jpeg')}}"/>-->
+<!--            </div>-->
+<!--        </li>-->
+<!--        {% endfor %}-->
+<!--    </ul>-->
+<!--</div>-->
 
-        <div class="post-heading">
-                <h1>"{{post.review_title}}"</h1>
-                {% if post.user != None: %}
-                <p>-{{ post.user.username }}</p>
-                {% else: %}
-                <p>-Spongebob</p>
-                {% endif %}
-                <h2 class="subheading">Venue </h2>
-                <p>{{post.venue_name}}</p>
-                <h2>Review</h2>
-                <p>{{post.review}}</p>
-            </div>
 
-
+{% block content %}
+<div class="container">
+  <h1 class="show-review-header">Venue Reviews</h1>
+  <h2 class="description">this is what you have to say about your local venues.</h2>
+  {% for review in reviews: %}
+  <div class="card">
+    <div class="back">
+        <div>
+            <div class="title">"{{ review.review_title }}"</div>
+            <p class="review"><span class="venue-name">Venue: </span>{{ review.venue_name }}</p>
+            <p class="review"><span class="venue-name">City: </span>{{ review.parent_post.city }}</p>
+            <p class="overview">{{ review.review }}</p>
+            {% if review.user_id == current_user.id: %}
+            <a href="{{url_for('edit_venue_review', id=review.id) }}" class="button edit-btn">Edit</a>
+            <a href="{{ url_for('delete_show_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
+            {% endif %}
+        </div>
     </div>
-
-    <div class="comment-section">
-        <h2 class="comment-title">Comments</h2>
-        <ul class="commentList">
-            {% for comment in post.comments: %}
-            <li>
-                <div class="commenterImage">
-
-                </div>
-                <div class="commentText">
-                    <p>{{ comment.text|safe }}</p>
-                </div>
-                <div class="avatar-image">
-                    <span>{{ comment.comment_author.username }}</span>
-                    <img src="{{ url_for('static', filename='img/scoob.jpeg')}}"/>
-                </div>
-            </li>
-            {% endfor %}
-        </ul>
-
-    </div>
+  </div>
 {% endfor %}
 </div>
+<div class="container text-center add">
+<a href="{{ url_for('show_review') }}" class="add-review-button">Add Review</a>
+</div>
+
+{% endblock %}
+{% include "footer.html" %}
