--- a/templates/add-venue.html
+++ b/templates/add-venue.html
@@ -14,7 +14,7 @@
     </div>
 {% else: %}
     <div class="title">
-        <h1>you cant add a Venue without an account you silly, silly virgin</h1>
+        <h2>you cant add a Venue without an account silly head</h2>
     </div>
 {% endif %}
 {% include "footer.html" %}
