--- a/templates/all-venue-reviews.html
+++ b/templates/all-venue-reviews.html
@@ -35,10 +35,13 @@
 
 
 {% block content %}
+<h1 class="show-review-header">Venue Reviews</h1>
+<h2 class="description">this is what you have to say about your local venues.</h2>
+{% for review in reviews: %}
+<div class="space"></div>
 <div class="container">
-  <h1 class="show-review-header">Venue Reviews</h1>
-  <h2 class="description">this is what you have to say about your local venues.</h2>
-  {% for review in reviews: %}
+
+
   <div class="card">
     <div class="back">
         <div>
@@ -48,16 +51,16 @@
             <p class="overview">{{ review.review }}</p>
             {% if review.user_id == current_user.id: %}
             <a href="{{url_for('edit_venue_review', id=review.id) }}" class="button edit-btn">Edit</a>
-            <a href="{{ url_for('delete_show_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
+            <a href="{{ url_for('delete_venue_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
             {% endif %}
         </div>
     </div>
   </div>
-{% endfor %}
 </div>
 <div class="container text-center add">
-<a href="{{ url_for('show_review') }}" class="add-review-button">Add Review</a>
+<a href="{{ url_for('post_venue_review') }}" class="add-review-button">Add Review</a>
 </div>
-
+<div class="space"></div>
+{% endfor %}
 {% endblock %}
 {% include "footer.html" %}
