--- a/static/pfstyles.css
+++ b/static/pfstyles.css
@@ -36,15 +36,16 @@ a {
 .btn {
     display: inline-block;
     font: inherit;
+    font-size: 3.2rem;
     background: none;
     border: none;
-    color: inherit;
+    color: #FCFF91;
     padding: 0;
     cursor: pointer;
 }
 
 .btn:focus {
-    outline: 0.5rem auto #4d90fe;
+    outline: 0.5rem auto #FCFF91;
 }
 
 .visually-hidden {
@@ -55,7 +56,7 @@ a {
     clip: rect(1px, 1px, 1px, 1px);
 }
 
-/* Profile Section */
+
 
 .profile {
     padding: 5rem 0;
@@ -94,26 +95,24 @@ a {
 .profile-user-name {
     display: inline-block;
     color: #FCFF91;
-    font-size: 4.2rem;
+    font-size: 4.4rem;
     font-weight: 300;
+    marign-left: 5px;
 }
 .profile-real-name {
     color: black;
 }
 .profile-edit-btn {
-    font-size: 2.4rem;
+    font-size: 1.9rem;
     line-height: 1.8;
-    border: 0.1rem solid #dbdbdb;
+    border: 0.1rem solid #FCFF91;
     border-radius: 0.3rem;
-    padding: 0 2.4rem;
-    color: white;
-    margin-left: 2rem;
+    padding: 1.4rem 2.4rem;
+    color: #FCFF91;
+    margin-left: 2.1rem;
 }
 
-.profile-settings-btn {
-    font-size: 2rem;
-    margin-left: 1rem;
-}
+
 
 .profile-stats {
     margin-top: 2.3rem;
@@ -132,11 +131,11 @@ a {
 }
 
 .profile-bio {
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 1.5;
-    margin-top: 2.3rem;
-    color: black;
+   font-size: 1.6rem;
+   font-weight: 400;
+   line-height: 1.5;
+   margin-top: 2.3rem;
+   color: black;
 }
 
 .profile-real-name,
@@ -145,81 +144,79 @@ a {
     font-weight: 600;
 }
 
-/* Gallery Section */
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -1rem -1rem;
-    padding-bottom: 3rem;
+.nav-container {
+    background-color: white;
+    text-align: center;
+    position: fixed;
+    margin: 50px;
 }
 
-.gallery-item {
-    position: relative;
-    flex: 1 0 22rem;
-    margin: 1rem;
-    color: #fff;
+nav {
+    position: fixed;
+    color: white;
+    margin: 50px;
+    text-align: left;
+    top: 100%;
+    left: 0%;
+}
+
+ul {
+    list-style-type: None;
+}
+
+.navlist {
+    padding-bottom: 20px;
+    list-style-type: None;
+    margin: 0px;
+    margin-bottom: 69px;
+    background-color: #0F5D66;
+    font-size: 27px;
+    font-family: 'Urbanist', sans-serif;
+}
+
+.navi {
+    float: right;
+}
+
+.navi a {
+  display: block;
+  color: #FCFF91;
+  text-decoration: none;
+  padding: 24px 16px;
+  text-decoration: none;
+}
+
+.navi a:hover {
+  background-color: #a2d173;
+  color: white;
+}
+
+#hamburger {
+    background-color: transparent;
+    color: #8FD1A2;
+    border: 0px;
+    display: none;
     cursor: pointer;
 }
 
-.gallery-item:hover .gallery-item-info,
-.gallery-item:focus .gallery-item-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+
+@media screen and (max-width: 767px) {
+    .navlist {
+        display: none;
+        flex-direction: column;
+    }
+    .navlist.show {
+        display: flex;
+        padding-left: 0px;
+
+    }
+    #hamburger {
+        display: block;
+        margin-bottom: 25px;
+        maring-left: 0px;
+        width: 25%;
+    }
 }
-
-.gallery-item-info {
-    display: none;
-}
-
-.gallery-item-info li {
-    display: inline-block;
-    font-size: 1.7rem;
-    font-weight: 600;
-}
-
-.gallery-item-likes {
-    margin-right: 2.2rem;
-}
-
-.gallery-item-type {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2.5rem;
-    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
-}
-
-.fa-clone,
-.fa-comment {
-    transform: rotateY(180deg);
-}
-
-.gallery-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-/* Loader */
-
-.loader {
-    width: 5rem;
-    height: 5rem;
-    border: 0.6rem solid #999;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    margin: 0 auto;
-    animation: loader 500ms linear infinite;
-}
-
-/* Media Query */
 
 @media screen and (max-width: 40rem) {
     .profile {
@@ -252,18 +249,19 @@ a {
     }
 
     .profile-user-name {
-        font-size: 2.2rem;
+        font-size: 3.2rem;
+        margin-top: 0px;
     }
 
     .profile-edit-btn {
         order: 1;
         padding: 0;
         text-align: center;
-        margin-top: 1rem;
+
     }
 
     .profile-edit-btn {
-        margin-left: 0;
+        margin-left: 2rem;
     }
 
     .profile-bio {
@@ -281,14 +279,13 @@ a {
     .profile-stats {
         order: 1;
         margin-top: 1.5rem;
+        text-size: 15px;
     }
 
     .profile-stats ul {
         display: flex;
         text-align: center;
         padding: 1.2rem 0;
-        border-top: 0.1rem solid #dadada;
-        border-bottom: 0.1rem solid #dadada;
     }
 
     .profile-stats li {
