--- a/static/review-styles.css
+++ b/static/review-styles.css
@@ -24,13 +24,13 @@ body {
 }
 
 
-
 .show-review-header {
      text-align: center;
+     color: #FCFF91;
      font-family: 'Urbanist', sans-serif;
 	 width: 100%;
 	 font-weight: 900;
-	 font-size: 1.618rem;
+	 font-size: 3rem;
 	 letter-spacing: 0.1ch;
 	 line-height: 1;
 	 padding-bottom: 0.5em;
@@ -54,6 +54,8 @@ body {
 }
 
 .description {
+     font-family: 'Urbanist', sans-serif;
+     color: #FCFF91;
 	 width: 100%;
 	 margin-top: 0;
 	 margin-left: 1rem;
@@ -62,17 +64,14 @@ body {
 
 }
 
-.card {
-    color: inherit;
-    cursor: pointer;
-    width: calc(33% - 3rem);
-    min-width: calc(33% - 3rem);
-    height: 400px;
-    min-height: 400px;
-    perspective: 1000px;
-    margin: 1em auto;
-    position: relative;
+span {
+    color: #FCFF91;
 }
+p {
+    color: #0F5D66;
+}
+
+
 
 .back {
 	 display: flex;
@@ -86,6 +85,7 @@ body {
 	 padding-top: 3rem;
 	 padding-bottom: 3rem;
 	 position: absolute;
+	 margin-bottom: 10px;
 	 height: auto;
 	 width: 100%;
 	 -webkit-backface-visibility: hidden;
@@ -93,14 +93,15 @@ body {
 
 }
 
-.back:before,
+/*.back:before,
 .back:after {
     content : "";
     display : table;
 }
 .back:after {
     clear : both;
-}
+
+}*/
 
 .title {
     margin-top: 0px;
@@ -163,4 +164,45 @@ a {
 	 top: 16px;
 	 box-shadow: 0 0 10px 10px rgba(26, 87, 230, 0.25);
 	 background-color: rgba(26, 87, 230, 0.25);
+}
+
+.space {
+    width: 100%;
+    height: 5rem;
+}
+
+@media screen and (max-width: 1200px) {
+      .add-review-button {
+        top: 0px;
+        position: fixed;
+        border: none;
+        height: 30px;
+        margin-right: 10rem;
+    }
+
+}
+
+@media screen and (max-width: 767px) {
+
+    .add-review-button {
+        top: 0px;
+        right: 5px;
+        position: fixed;
+        border: none;
+        height: auto;
+        margin-top: 0px;
+        padding-top: 0px;
+        margin-right: 1rem;
+    }
+   .container {
+        padding-right: 10rem;
+   }
+   .back {
+		 width: auto;
+		 margin: 0%;
+
+	}
+	.card {
+	    margin: 0px;
+	}
 }
