--- a/templates/all-show-reviews.html
+++ b/templates/all-show-reviews.html
@@ -35,23 +35,24 @@
 
 
 {% block content %}
+
+<h1 class="show-review-header">Show Reviews</h1>
+<h2 class="description">these are your experiences, your good times and bad times.</h2>
+{% for review in reviews %}
+<div class="space"></div>
 <div class="container">
 
-  <h1 class="show-review-header">Show Reviews</h1>
-  <h2 class="description">these are your experiences, your good times and bad times.</h2>
-  {% for review in reviews %}
   <div class="card">
     <div class="back">
         <div>
             <div class="title">"{{ review.title }}"</div>
-            <div class="review"><span class="venue-name">Date: </span>{{review.date}}</div>
-            <div class="rating">
-            <label><span class="venue-name">Rating: </span>{{ review.rating }}</label>
-                <i></i>
-            </div>
-
+            <p class="review"><span class="venue-name">Date: </span>{{review.date}}</p>
+            <div class="review"><span class="venue-name">Rating: </span>{{ review.rating }}</div>
             <p class="review"><span class="venue-name">Venue: </span>{{ review.venue.venue_name }}</p>
+            <p class="review"><span class="venue-name">Artist(s): </span>{{ review.artist_names }}</p>
+            <p class="review"><span class="venue-name">Genre: </span>{{ review.genre }}</p>
             <p class="overview">{{ review.review }}</p>
+            <p class="review"><span class="venue-name">Post by </span>{{ review.user.username }}</p>
             {% if review.user_id == current_user.id: %}
             <a href="{{ url_for('edit_show_review', id=review.id) }}" class="button edit-btn">Edit</a>
             <a href="{{ url_for('delete_show_review', post_id=review.id) }}" class="button delete-btn">Delete</a>
@@ -60,8 +61,10 @@
         </div>
     </div>
   </div>
-{% endfor %}
+
 </div>
+<div class="space"></div>
+{% endfor %}
 
 {% endblock %}
 <button class="add-review-button"><a href="{{ url_for('show_review') }}">
