--- a/templates/edit-venue-review.html
+++ b/templates/edit-venue-review.html
@@ -2,7 +2,7 @@
 {% include "navbar.html" %}
 
 <div class="title">
-<form action="{{ url_for('edit_show_review', id=review.id) }}" method="post">
+<form action="{{ url_for('edit_venue_review', id=review.id) }}" method="post">
     <label>Edit Review</label>
     <input type="text" placeholder="" name="review">
     <button type="submit">edit</button>
