--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,8 @@
     {% endif %}
     <li><a href="{{ url_for('all_bots') }}">Bots</a></li>
     {% if current_user.is_authenticated %}
-      <li><a href="{{ url_for('logout') }}">Logout</a></li>
+      <li><a href="{{ url_for('logout') }}">Logout</a>
+      <li><a href="{{ url_for('user_profile') }}">Profile</a></li>
     {% endif %}
     {% if not current_user.is_authenticated %}
       <li><a href="{{ url_for('login') }}">Login</a></li>
